# solverforge-calendar

./: .gitignore  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
docs/wireframes/: cli.md  tui.md
scripts/: solverforge-calendar-cli
src/: app.rs  calendar_service.rs  cli.rs  dag.rs  db.rs  event.rs  ical.rs  keys.rs  lib.rs  main.rs  models.rs  notifications.rs  recurrence.rs  theme.rs  worker.rs
src/google/: auth.rs  discovery.rs  mod.rs  sync.rs  types.rs
src/ui/: agenda_view.rs  calendar_list.rs  day_view.rs  event_form.rs  google_auth.rs  help.rs  mod.rs  month_view.rs  quick_add.rs  status_bar.rs  util.rs  week_view.rs
tests/: cli.rs
