[package]
name = "solverforge-calendar"
version = "0.1.0"
edition = "2021"
description = "A spiffy ratatui TUI calendar — local SQLite + Google Calendar, DAG-linked events"

[dependencies]
# TUI
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"

# Async runtime (required by google-calendar3)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"

# Time — chrono for calendar math, chrono-tz for IANA timezone support
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }

# RFC 5545 recurrence rule parsing + expansion
rrule = { version = "0.14", features = ["serde"] }

# Google Calendar API v3 (bundles yup-oauth2 + hyper + rustls)
google-calendar3 = "7.0"

# iCal import/export
icalendar = "0.17"

# Desktop notifications (D-Bus on Linux)
notify-rust = { version = "4.12", default-features = false, features = ["z"] }

# Plain SQLite (Rails-readable — no SQLCipher)
rusqlite = { version = "0.38", features = ["bundled"] }

# OS keyring for Google OAuth tokens
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

# UUID v4 for all primary keys
uuid = { version = "1", features = ["v4", "serde"] }

# Utilities
dirs = "6"
unicode-width = "0.2"
open = "5"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
pretty_assertions = "1"
